spacing fixes

--- a/src/css/imports/_navbar.scss
+++ b/src/css/imports/_navbar.scss
@@ -1,3 +1,8 @@
 .navbar {
   padding: 28px 80px;
+  .button{
+    font-size: 18px;
+  }
+
 }
+
