--- a/src/css/imports/_variables.scss
+++ b/src/css/imports/_variables.scss
@@ -1,6 +1,6 @@
 $family-primary:'proxima-nova', sans-serif;
 $size-5: 1rem !default;
-$size-6: 0.9rem !default;
+$size-6: 0.8rem !default;
 $size-7: 0.7rem !default;
 $size-4: 1.8rem !default;
 $size-3: 2.4rem !default;
@@ -8,6 +8,10 @@ $size-2: 3.1rem !default;
 $size-1: 4.5rem !default;
 $title-color: black;
 $title-line-height: 2.4rem;
+$subtitle-line-height: 1.4rem;
+$weight-normal: 400;
+$weight-bold: 700;
+$weight-semibold: 600;
 $body-color: black;
 $subtitle-color: black;
 $section-padding: 120px 80px;
