--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -26,7 +26,7 @@
 
 /* External Library Includes */
 @import 'src/css/imports/_variables.scss';
-@import "~bulma/sass/utilities/_all";
+@import "~bulma/sass/utilities/_all.sass";
 
 @import 'src/css/imports/_colors.scss';
 /* Modules */
@@ -36,10 +36,8 @@
 @import 'src/css/imports/_navbar.scss';
 
 html {
-  font-size: 16px;
-  @include widescreen {
-    font-size: 20px;
-  }
+  font-size: 20px;
+
 }
 .bedrift_animation-0{
   background-image: url('/img/The Munchies-1.png');
